Adjust code block padding

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ div.sourceCode {
     border-left: 1px solid #000000;
     border-bottom: 1px solid #000000;
     border-right: 1px solid #000000;
-    padding: 20px;
+    padding: 0px 20px 0px 20px;
 }
 
 .footer {
