--- a/style.css
+++ b/style.css
@@ -40,6 +40,12 @@ div.sourceCode {
     padding: 0px 20px 0px 20px;
 }
 
+blockquote {
+  margin: 20px 0 30px;
+  padding-left: 20px;
+  border-left: 5px solid lightgray;
+}
+
 .footer {
     margin-top: 50px;
 }
